--- a/src/midgard/pages/user/user-list/user-list.component.scss
+++ b/src/midgard/pages/user/user-list/user-list.component.scss
@@ -2,6 +2,9 @@
 
 .table {
   &__picture {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-color: $gray-lighter;
     height: rem-calc(40);
     width: rem-calc(40);
