--- a/src/midgard/pages/user/user.component.scss
+++ b/src/midgard/pages/user/user.component.scss
@@ -1,5 +1,37 @@
 @import "../../../styles";
 
+.profile {
+  &__container {
+    display: flex;
+    margin-bottom: rem-calc(30);
+  }
+  &__picture {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: $gray-lighter;
+    height: rem-calc(150);
+    width: rem-calc(150);
+    border-radius: 50%;
+    margin-right: rem-calc(10);
+  }
+  &__row {
+    margin-bottom: rem-calc(15);
+  }
+  &__column {
+    display: flex;
+    flex-basis: 20%;
+    flex-direction: column;
+    margin-left: rem-calc(15);
+    &__caption {
+      color: $gray-light;
+      margin-bottom: rem-calc(5);
+    }
+    &__name {
+      display: flex;
+    }
+  }
+}
 .form__container{
   display: flex;
   flex-wrap: wrap;
