--- a/src/midgard/pages/user/user-list/user-list.component.html
+++ b/src/midgard/pages/user/user-list/user-list.component.html
@@ -1,3 +1,14 @@
+<h3>
+  Current Users
+  <fj-button
+    [shape]="'rounded'"
+    [size]="'small'"
+    [iconMargin]="'1px 5px 1px 0px'"
+    [iconPosition]="'before'"
+    [icon]="'plus'"
+  > Invite User
+  </fj-button>
+</h3>
 <fj-table
   mgCrud
   #crud="mgCrud"
