add actions to activate/deactivate user

--- a/src/midgard/pages/user/user-list/user-list.component.scss
+++ b/src/midgard/pages/user/user-list/user-list.component.scss
@@ -15,3 +15,15 @@
     color: $text-primary-color
   }
 }
+
+.inactive {
+  p {
+    color: $gray-light;
+  }
+}
+
+.active {
+  p {
+    color: $text-primary-color;
+  }
+}
