fixes to editing in user profile

--- a/src/midgard/pages/user/user-list/user-list.component.html
+++ b/src/midgard/pages/user/user-list/user-list.component.html
@@ -23,7 +23,7 @@
   [deleteMessage]="'The user has been deactivated'"
   (dataLoadedFromStore)="defineDropdownOptions()"
 >
-  <fj-table-custom-column name="Custom" sortable="true" index="0" prop="first_name" flex="2">
+  <fj-table-custom-column name="Custom" sortable="true" index="0" prop="first_name" flex="3">
     <ng-template fj-table-header-template>
       <p>Full name</p>
     </ng-template>
@@ -37,32 +37,19 @@
       <fj-inline-text-editor
         *ngIf="row.is_active"
         [displayElementCustomStyles]="{color: 'black', fontWeight: '700', marginRight: '5px'}"
-        [value]="row['first_name']"
-        name="first_name"
+        [value]="row['first_name'] + ' ' + row['last_name']"
+        name="name"
       ></fj-inline-text-editor>
       <fj-inline-text-editor
         *ngIf="!row.is_active"
         [displayElementCustomStyles]="{fontWeight: '700', marginRight: '5px'}"
         [disabled]="true"
-        [value]="row['first_name']"
-        name="email"
-      ></fj-inline-text-editor>
-      <fj-inline-text-editor
-        *ngIf="row.is_active"
-        [displayElementCustomStyles]="{color: 'black', fontWeight: '700'}"
-        [value]="row['last_name']"
-        name="last_name"
-      ></fj-inline-text-editor>
-      <fj-inline-text-editor
-        *ngIf="!row.is_active"
-        [displayElementCustomStyles]="{fontWeight: '700'}"
-        [disabled]="true"
-        [value]="row['last_name']"
-        name="last_name"
+        [value]="row['first_name'] + ' ' + row['last_name']"
+        name="name"
       ></fj-inline-text-editor>
     </ng-template>
   </fj-table-custom-column>
-  <fj-table-custom-column name="Custom" sortable="true" index="1" prop="email" flex="2">
+  <fj-table-custom-column name="Custom" sortable="true" index="1" prop="email" flex="3">
     <ng-template fj-table-header-template>
       <p>Email</p>
     </ng-template>
@@ -83,7 +70,7 @@
       </fj-inline-text-editor>
     </ng-template>
   </fj-table-custom-column>
-  <fj-table-custom-column name="Custom" sortable="true" index="2" prop="activity" flex="2">
+  <fj-table-custom-column name="Custom" sortable="true" index="2" prop="activity" flex="1">
     <ng-template fj-table-header-template>
       <p>Last Activity</p>
     </ng-template>
