--- a/src/midgard/pages/user/user-list/user-list.component.scss
+++ b/src/midgard/pages/user/user-list/user-list.component.scss
@@ -5,7 +5,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: $gray-lighter;
+    background-color: $primary-color-lightest;
     height: rem-calc(40);
     width: rem-calc(40);
     border-radius: 50%;
