--- a/src/midgard/pages/user/user.component.html
+++ b/src/midgard/pages/user/user.component.html
@@ -40,7 +40,7 @@
         <!-- Organization -->
       <div class="profile__row">
         <small class="profile__column__caption">Organization: </small>
-        <p *ngIf="crud.rows.data" class="profile__column__text">{{crud.rows.data.organization.name}}</p>
+        <p *ngIf="crud.rows.data" class="profile__column__text">{{crud.rows.data.organization?.name}}</p>
       </div>
     </div>
     <div class="profile__column">
