--- a/src/midgard/pages/user/user-management/user-management.component.html
+++ b/src/midgard/pages/user/user-management/user-management.component.html
@@ -9,7 +9,7 @@
   > Invite User
   </fj-button>
 </h3>
-<div class="users__content-switcher">
-  <fj-content-switcher [options]="contentSwitcherOptions" *ngIf="contentSwitcherOptions" (optionSelected)="subNavChanged($event)" [selectedOption]="0"></fj-content-switcher>
+<div class="users__content-switcher__container">
+  <fj-content-switcher class="users__content-switcher" [options]="contentSwitcherOptions" *ngIf="contentSwitcherOptions" (optionSelected)="subNavChanged($event)"></fj-content-switcher>
 </div>
 <router-outlet></router-outlet>
