--- a/src/midgard/pages/login/login.component.html
+++ b/src/midgard/pages/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+r<div class="container">
   <fj-card>
     <img class="login__card__logo" src="assets/midgard-logo.svg">
     <div class="login__card__content">
