fix editing in card item in crud module

--- a/src/midgard/components/card-item/card-item.component.html
+++ b/src/midgard/components/card-item/card-item.component.html
@@ -107,7 +107,7 @@
                 <fj-inline-text-editor
                   [value]="item[detailItem?.prop]"
                   name="details"
-                  [index]="0"
+                  [index]="i"
                   displayElement="div"
                   (elementEdited)="onEditElement($event)"
                   [inputCustomStyles]="inputFieldStyles">
