--- a/src/midgard/pages/register/register.component.html
+++ b/src/midgard/pages/register/register.component.html
@@ -1,6 +1,6 @@
 <div class="container" *ngIf="registerForm">
   <fj-card>
-    <img class="register__card__logo" src="assets/midgard-logo.svg">
+    <img class="register__card__logo" src="assets/img/midgard-logo.svg">
     <div class="register__card__content">
       <form class="register__form" [formGroup]="registerForm" novalidate (submit)="register()">
         <div class="register__form__field register__form__field--full-width">
