--- a/src/midgard/components/card-item/card-item.component.html
+++ b/src/midgard/components/card-item/card-item.component.html
@@ -84,7 +84,7 @@
         >
           <fj-button [ngClass]="'card-item__actions__item card-item__actions__item--'+ layout" color="light" size="small" *ngIf="options?.secondaryAction" (click)="onActionClicked($event, options?.secondaryAction.value)">{{options?.secondaryAction.label}}</fj-button>
           <fj-button class="card-item__actions__item" *ngIf="options?.primaryAction" size="small" (click)="onActionClicked($event, options?.primaryAction.value)">{{options?.primaryAction.label}}</fj-button>
-          <fj-native-dropdown class="card-item__actions__item" *ngIf="options?.otherActions" size="small" [options]="options?.otherActions" [customStyles]="{'marginTop': '0px', 'borderColor': 'rgba(27, 81, 160, 1)','backgroundColor': 'white','width' : '40px', 'padding': '0 0px 0 10px'}"  (optionSelected)="onActionClicked($event)"></fj-native-dropdown>
+          <fj-native-dropdown class="card-item__actions__item" *ngIf="options?.otherActions" size="small" [options]="options?.otherActions" [customStyles]="{'marginTop': '0px', 'color': 'rgba(27, 81, 160, 1)', 'borderColor': 'rgba(27, 81, 160, 1)','backgroundColor': 'white','width' : '40px', 'padding': '0 0px 0 10px'}"  (optionSelected)="onActionClicked($event)"></fj-native-dropdown>
         </div>
       </ng-container>
 
@@ -162,7 +162,7 @@
     >
       {{options?.belowMenuPrimaryAction.label}}
     </fj-button>
-    <fj-native-dropdown *ngIf="showBelowMenu && options?.belowMenuOtherActions" [options]="options?.belowMenuOtherActions" size="small" [showDefaultOnClick]="true" [customStyles]="{'marginTop': '0px', 'borderColor': 'rgba(27, 81, 160, 1)','backgroundColor': 'white','width' : '40px', 'padding': '0 0px 0 10px'}" (optionSelected)="onActionClicked($event)"></fj-native-dropdown>
+    <fj-native-dropdown *ngIf="showBelowMenu && options?.belowMenuOtherActions" [options]="options?.belowMenuOtherActions" size="small" [showDefaultOnClick]="true" [customStyles]="{'marginTop': '0px', 'color': 'rgba(27, 81, 160, 1)', 'borderColor': 'rgba(27, 81, 160, 1)','backgroundColor': 'white','width' : '40px', 'padding': '0 0px 0 10px'}" (optionSelected)="onActionClicked($event)"></fj-native-dropdown>
   </div>
 </div>
 
