working dynamic crud module

--- a/src/midgard/pages/user/user-management/user-list/user-list.component.html
+++ b/src/midgard/pages/user/user-management/user-list/user-list.component.html
@@ -3,9 +3,8 @@
   #crud="mgCrud"
   [rows]= "crud.rows"
   [viewPort]="'350px'"
-  [loadAction]="'LOAD_DATA_COREUSER'"
-  [loadedSelector]="loadedSelector"
-  [dataSelector]="dataSelector"
+  [endpoint]="'coreuser'"
+  [idProp]="'id'"
   [deleteAction]="'DELETE_COREUSER'"
   [updateAction]="'UPDATE_COREUSER'"
   [deleteMessage]="'The user has been deactivated'"
