--- a/src/midgard/components/nav-bar/nav-bar.component.html
+++ b/src/midgard/components/nav-bar/nav-bar.component.html
@@ -2,6 +2,9 @@
   <div class="nav-bar__container" [ngClass]="{'nav-bar__container--hidden': hideMenu}">
     <div id="navbar" class="nav-bar__elements">  <mg-navbar-elem label="Products" route="products" icon="local_offer"></mg-navbar-elem>
   <mg-navbar-elem label="Locations" route="locations" icon="map"></mg-navbar-elem>
+  <mg-navbar-elem label="Blueprint" route="blueprint-client" icon="rounded_corner"></mg-navbar-elem>
+  <mg-navbar-elem label="Documents" route="documents" icon="class"></mg-navbar-elem>
+  <mg-navbar-elem label="Contacts" route="contacts" icon="local_offer"></mg-navbar-elem>
 </div>
     <a class="nav-bar__user" (click)="setTopBarOptions()" routerLink="/user" routerLinkActive="nav-bar__user--active">
       <div class="nav-bar__user__container p2">
